<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="348dp"
        android:background="@drawable/rounded"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/login"
            android:textColor="@color/main"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/enteremail"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/enteremail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/enterpass"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/enterpass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/enterbutton"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>