<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentEventActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="140dp"
        android:layout_height="160dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_image" />

    <LinearLayout
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:fontFamily="@font/roboto_slab_bold"
            android:text="Name"
            android:textColor="@color/darkpink"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/place_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:text="Place"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/date_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:text="Date of event"
            android:textSize="14sp" />




    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/descr_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:fontFamily="@font/roboto_slab_light1"
            android:text="@string/lorem"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"


                android:text="@string/choose"
                android:textSize="16sp" />


        </RadioGroup>

        <Button
            android:id="@+id/buy"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"

            android:background="@drawable/rounded_button"
            android:text="@string/buy"
            android:textColor="@color/white" />


    </LinearLayout>





    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:id="@+id/all_button_id"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/my_button_id"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/allevents"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/my_button_id"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/mytickets"
            android:textColor="@color/white" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>