<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MyActivity">

  <TextView
      android:id="@+id/my"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"


      android:layout_marginTop="10dp"
      android:fontFamily="@font/roboto_slab_bold"
      android:text="@string/mytickets"
      android:textColor="@color/main"
      android:textSize="40sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="MissingConstraints" />
  <TextView
      android:id="@+id/no_tickets"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="invisible"


      android:layout_marginTop="90dp"
      android:fontFamily="@font/roboto_slab_bold"
      android:text="@string/no_tickets"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="MissingConstraints" />

  <ListView
      android:id="@+id/list_my_events"
      android:layout_width="match_parent"

      android:layout_marginStart="16dp"

      android:layout_marginEnd="16dp"
      android:divider="@null"
      android:dividerHeight="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_height="550dp"/>


  <RelativeLayout
      android:id="@+id/menu"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:background="@color/main"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" >

    <Button
        android:id="@+id/all_button_id"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_toStartOf="@+id/my_button_id"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/allevents"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/my_button_id"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button_light"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/mytickets"
        android:textColor="@color/white" />
  </RelativeLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>